[gd_scene load_steps=14 format=3 uid="uid://cxohvxcjt0mgq"]

[ext_resource type="Texture2D" uid="uid://bsxhyqpffijo6" path="res://Sprites/Buildings/Mysterious Mans House/Door Closed/Mysterious_House_Door_Closed1.png" id="1_d5c8s"]
[ext_resource type="Texture2D" uid="uid://c7da2y2odogrw" path="res://Sprites/Buildings/Mysterious Mans House/Door Closed/Mysterious_House_Door_Closed2.png" id="2_jq1bd"]
[ext_resource type="Texture2D" uid="uid://c0tuvwyg5bog7" path="res://Sprites/Buildings/Mysterious Mans House/Door Closed/Mysterious_House_Door_Closed3.png" id="3_c3877"]
[ext_resource type="Texture2D" uid="uid://5wdk3hghyx7m" path="res://Sprites/Buildings/Mysterious Mans House/Door Opened/Mysterious_House_Opening1.png" id="4_kaki0"]
[ext_resource type="Texture2D" uid="uid://dtymxbgaom3s2" path="res://Sprites/Buildings/Mysterious Mans House/Door Opened/Mysterious_House_Opening2.png" id="5_04ae0"]
[ext_resource type="Texture2D" uid="uid://f238mw5l2pyg" path="res://Sprites/Buildings/Mysterious Mans House/Door Opened/Mysterious_House_Opening3.png" id="6_umi4y"]
[ext_resource type="Texture2D" uid="uid://cvctq42codg84" path="res://Sprites/Buildings/Mysterious Mans House/Static/Mysterious_House2.png" id="7_jfh85"]
[ext_resource type="Texture2D" uid="uid://d3nwqfkfyhxp7" path="res://Sprites/Buildings/Mysterious Mans House/Static/Mysterious_House1.png" id="8_6rv6c"]
[ext_resource type="PackedScene" uid="uid://b6hpa6dm45cgs" path="res://Scenes/Misc/Shadow/shadow.tscn" id="9_abavv"]
[ext_resource type="Script" path="res://Scripts/Buildings/mysterious_house.gd" id="9_vcmku"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l32cu"]
animations = [{
"frames": [ExtResource("1_d5c8s"), ExtResource("2_jq1bd"), ExtResource("3_c3877")],
"loop": false,
"name": &"Door Close",
"speed": 3.0
}, {
"frames": [ExtResource("4_kaki0"), ExtResource("5_04ae0"), ExtResource("6_umi4y")],
"loop": false,
"name": &"Door Open",
"speed": 3.0
}, {
"frames": [ExtResource("7_jfh85"), ExtResource("8_6rv6c")],
"loop": true,
"name": &"Static",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbrkh"]
size = Vector2(167, 75.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6hhm"]
size = Vector2(462, 323)

[node name="Mysterious_House" type="AnimatedSprite2D"]
z_index = 2
frames = SubResource("SpriteFrames_l32cu")
animation = &"Static"
playing = true
script = ExtResource("9_vcmku")

[node name="Interaction" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
position = Vector2(-1, 246)
shape = SubResource("RectangleShape2D_fbrkh")

[node name="Barrier" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
position = Vector2(0, 47.5)
shape = SubResource("RectangleShape2D_k6hhm")

[node name="Shadow" parent="." instance=ExtResource("9_abavv")]
z_index = -2
position = Vector2(-0.250003, 288)
scale = Vector2(7.19531, 2.57031)

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="body_entered" from="Interaction" to="." method="_on_interaction_body_entered"]
[connection signal="body_exited" from="Interaction" to="." method="_on_interaction_body_exited"]
